document index , show, create apis + create category schemas
